--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -72,3 +72,11 @@ input[type="number"] {
 	background-color: var(--bg-cell-selected);
 	color: white;
 }
+
+.cell-flag {
+	background-image: url('../img/logo.png');
+	background-size: 80%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-color: yellow;
+}
